--- a/docs/src/.vuepress/theme/styles/palette.styl
+++ b/docs/src/.vuepress/theme/styles/palette.styl
@@ -24,8 +24,8 @@ $textShadow = 0 2px 4px $darkColor1;
 $borderRadius = .25rem
 $lineNumbersWrapperWidth = 2.5rem
 
-$backgroundColor ?= #fff
-$backgroundColorDark ?= #181818
+$backgroundColor ?= #fff9
+$backgroundColorDark ?= #18181899
 
 $boxShadow = 0 1px 8px 0 $darkColor1
 $boxShadowHover = 0 2px 16px 0 $darkColor2
