--- a/docs/src/.vuepress/public/iconfont/iconfont.css
+++ b/docs/src/.vuepress/public/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4153767 */
-  src: url('iconfont.woff2?t=1688575710274') format('woff2'),
-       url('iconfont.woff?t=1688575710274') format('woff'),
-       url('iconfont.ttf?t=1688575710274') format('truetype');
+  src: url('iconfont.woff2?t=1688642661658') format('woff2'),
+       url('iconfont.woff?t=1688642661658') format('woff'),
+       url('iconfont.ttf?t=1688642661658') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-copyright:before {
+  content: "\eb18";
 }
 
 .icon-search:before {
