--- a/docs/src/.vuepress/theme/styles/theme.styl
+++ b/docs/src/.vuepress/theme/styles/theme.styl
@@ -41,7 +41,7 @@ body
 
 .sidebar
   font-size 16px
-  background-color var(--background-color)
+  background-color var(--background-navbar-color)
   width $sidebarWidth
   position fixed
   z-index 10
