feat: beautify the page

--- a/docs/src/.vuepress/theme/styles/wrapper.styl
+++ b/docs/src/.vuepress/theme/styles/wrapper.styl
@@ -2,6 +2,8 @@ $wrapper
   max-width $contentWidth
   margin 0 auto
   padding 2rem 2.5rem
+  p
+    word-break break-word
   @media (max-width: $MQNarrow)
     padding 2rem
   @media (max-width: $MQMobileNarrow)
