--- a/docs/src/.vuepress/theme/styles/theme.styl
+++ b/docs/src/.vuepress/theme/styles/theme.styl
@@ -12,7 +12,7 @@ body
   font-family "Helvetica Neue", Arial, Ubuntu, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Cantarell, "Fira Sans", "Droid Sans", sans-serif
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
-  font-size 15px
+  font-size 1rem
   color var(--text-color)
   background-color var(--background-color)
 
@@ -109,7 +109,7 @@ strong
   font-weight 600
 
 h1, h2, h3, h4, h5, h6
-  font-weight 500
+  font-weight 700
   line-height 1.25
   .content__default:not(.custom) > &
     margin-top (2.1rem - $navbarHeight)
